--- a/app/src/main/res/navigation/nav_graph0.xml
+++ b/app/src/main/res/navigation/nav_graph0.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_login_to_setUsername"
             app:destination="@id/setUsername" />
+        <action
+            android:id="@+id/action_login_to_mainPage"
+            app:destination="@id/mainPage" />
     </fragment>
     <fragment
         android:id="@+id/mainPage"
