--- a/app/src/main/res/layout/fragment_intresteditems.xml
+++ b/app/src/main/res/layout/fragment_intresteditems.xml
@@ -53,11 +53,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
-            android:gravity="bottom"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="top"
+            >
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="320dp"
+                android:rowCount="5"
+                android:columnCount="3"
+                android:padding="0dp"
+                android:id="@+id/cards_layout"
+                android:orientation="horizontal">
+
+
+
+
+
+            </GridLayout>
+
+
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/intresteditemsbtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="55dp"
@@ -68,6 +86,7 @@
                 android:textColorHint="#FDFDFD"
                 android:textColorLink="#FAFAFA"
                 app:cornerRadius="20dp" />
+
         </LinearLayout>
 
 
