--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -92,6 +92,7 @@
             app:hintTextColor="#FFFFFF">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/register_email_textbox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
@@ -115,6 +116,7 @@
                 app:hintTextColor="#FFFFFF">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/register_pass_textbox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
