--- a/app/src/main/res/layout/fragment_subreddit.xml
+++ b/app/src/main/res/layout/fragment_subreddit.xml
@@ -109,16 +109,22 @@
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="25dp"
                         android:text="desc"
+                        android:layout_marginBottom="15dp"
                         android:textColor="#BDBDBD" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0.3dp"
+                        android:background="#3E3E3E"
+                        android:orientation="vertical" />
 
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/subreddit_recycler_view"
                     android:layout_width="match_parent"
-                    android:nestedScrollingEnabled="false"
                     android:layout_height="wrap_content"
-                    android:minHeight="600dp"/>
+                    android:minHeight="6dp"/>
 
 
             </LinearLayout>
